Correct flexbox alignment and small cahnges to component styles

--- a/client/src/components/chat/chat.styles.scss
+++ b/client/src/components/chat/chat.styles.scss
@@ -8,11 +8,10 @@
   .container {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    background: #ffffff;
     height: 75%;
     width: 50%;
     border-radius: 8px;
+    background: #ffffff;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.07), 0 2px 4px rgba(0, 0, 0, 0.07),
       0 4px 8px rgba(0, 0, 0, 0.07), 0 8px 16px rgba(0, 0, 0, 0.07),
       0 16px 32px rgba(0, 0, 0, 0.07), 0 32px 64px rgba(0, 0, 0, 0.07);
@@ -20,6 +19,12 @@
 }
 
 @media screen and (max-width: 800px) {
+  .outer-container {
+    min-height: -webkit-fill-available;
+    width: 100%;
+    border-radius: 0;
+  }
+
   .outer-container .container {
     height: 100%;
     width: 100%;
