--- a/client/src/components/info-bar/info-bar.styles.scss
+++ b/client/src/components/info-bar/info-bar.styles.scss
@@ -4,19 +4,18 @@
   justify-content: space-between;
   background: var(--color-primary);
   border-radius: 8px 8px 0 0;
-  height: 8%;
+  flex: 1;
   width: 100%;
   padding: 0 20px;
 
   .left-inner-container {
-    flex: 0.5;
     display: flex;
+    flex: 1;
     align-items: center;
     color: white;
 
     .online-icon {
-      margin-top: 4px;
-      margin-right: 3%;
+      margin-right: 10px;
       height: 12px;
       width: 12px;
     }
@@ -24,7 +23,7 @@
 
   .right-inner-container {
     display: flex;
-    flex: 0.5;
+    flex: 1;
     justify-content: flex-end;
   }
 }
