--- a/client/src/components/input/input.styles.scss
+++ b/client/src/components/input/input.styles.scss
@@ -1,22 +1,21 @@
 .form {
   display: flex;
-  height: 10%;
+  flex: 1;
   width: 100%;
-  border-top: 1.25px solid #d3d3d3;
-  border-radius: 0 0 8px 8px;
 
   .input {
-    display: flex;
-    width: 80%;
+    flex: 3;
     border: none;
+    border-top: 1.25px solid #d3d3d3;
     padding: 0 20px;
     font-size: 16px;
   }
 
   .send-button {
-    color: #ffffff;
-    width: 20%;
+    flex: 1;
     border: none;
+    border-top: 1.25px solid #d3d3d3;
+    color: white;
     text-transform: uppercase;
     text-decoration: none;
     background: var(--color-primary);
