--- a/client/src/components/messages/messages.styles.scss
+++ b/client/src/components/messages/messages.styles.scss
@@ -1,5 +1,4 @@
 .messages {
   overflow: auto;
-  flex: auto;
-  height: 75%;
+  flex: 8;
 }
